<resources>
    <string name="app_name">Photo To Text</string>

    <string name="notes">Notes</string>
    <string name="settings">Settings</string>

    <string name="choose_in_gallery">Choose in gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="cancel">Cancel</string>
    <string name="default_photo_name">Photo.jpg</string>

    <string name="uploading">Uploading…</string>
    <string name="downloading">Downloading…</string>
    <string name="recognition">Recognition…</string>
    <string name="loading">Loading…</string>
    <string name="no_notes">No notes</string>
    <string name="nothing_is_recognized">Nothing is recognized</string>
    <string name="search">Search</string>

    <string name="save">Save</string>
    <string name="save_note">Save note</string>
    <string name="note_save_confirmation">Note has been modified, save changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="main_language_preference_summary">Choose main language for recognition</string>
    <string name="main_language_preference_title">Main language</string>
    <string name="secondary_language_preference_summary">Choose secondary language for recognition</string>
    <string name="secondary_language_preference_title">Secondary language</string>
    <string name="image_samples_preference_summary">Download image samples from http://ocrsdk.com/help/picture_samples.zip</string>
    <string name="image_samples_preference_title">Image samples</string>
    <string name="image_samples_url">http://ocrsdk.com/help/picture_samples.zip</string>
</resources>
