<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="English"
        android:entries="@array/language_names"
        android:entryValues="@array/language_values"
        android:key="main_language"
        android:summary="@string/main_language_preference_summary"
        android:title="@string/main_language_preference_title"/>

    <ListPreference
        android:defaultValue="Russian"
        android:entries="@array/language_names"
        android:entryValues="@array/language_values"
        android:key="secondary_language"
        android:summary="@string/secondary_language_preference_summary"
        android:title="@string/secondary_language_preference_title"/>

    <Preference
        android:summary="@string/image_samples_preference_summary"
        android:title="@string/image_samples_preference_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/image_samples_url"/>
    </Preference>
</PreferenceScreen>